# 2023-spring-computer-science

./: .gitignore  01_intro.html  LICENSE  README.md
.github/workflows/: build-projects.yml
01_vcs/: CMakeLists.txt  README.md  main.cpp  try.cpp  vcs.h
01_vcs/KVAS-Team/: .gitignore  README.md  main.cpp
01_vcs/KVAS-Team/include/: cli.hpp  utils.hpp
01_vcs/KVAS-Team/src/: utils.cpp  vcs.cpp
01_vcs/include/: vcs.hpp
01_vcs/src/: cli.cpp  cli.h  vcs.cpp  vcs.h
01_vcs/tests_program/: README.md
02_calc/: CMakeLists.txt  README.md
02_calc/src/: logic.cpp  logic.h  math_constants.h  ui.cpp  ui.h
03_telegram/: CMakeLists.txt  README.md  config.json
CheeseGang/01_vcs/: CMakeLists.txt  README.md  cli.cpp  main.cpp
CheeseGang/01_vcs/src/: cli.cpp  cli.h  vcs.cpp  vcs.h
CheeseGang/02_calc/: CMakeLists.txt  README.md  main.cpp
CheeseGang/02_calc/src/: logic.cpp  logic.h  physics_constants.h  ui.cpp  ui.h
CheeseGang/03_telegram/: ConsoleApplication6.sln  README.md
CheeseGang/03_telegram/ConsoleApplication6/: ConsoleApplication6.cpp  ConsoleApplication6.vcxproj  ConsoleApplication6.vcxproj.filters
CheeseGang/03_telegram/ConsoleApplication6/x64/Debug/: ConsoleApplication6.exe.recipe  ConsoleApplication6.ilk  ConsoleApplication6.vcxproj.FileListAbsolute.txt  vc141.idb  vc143.idb
CheeseGang/03_telegram/ConsoleApplication6/x64/Debug/ConsoleA.75D23A19.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  ConsoleApplication6.lastbuildstate  ConsoleApplication6.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
CheeseGang/03_telegram/x64/Debug/: ConsoleApplication6.ilk
Dis-Artist/01_vcs/: README.md  cli.cpp  cli.h  main.cpp  vcs.cpp  vcs.h
Dis-Artist/02_calc/: CMakeLists.txt  main.cpp
Dis-Artist/02_calc/src/: logic.cpp  logic.h  ui.cpp  ui.h
Dis-Artist/03_telegram/: CMakeLists.txt  README.md  config.cpp  config.h  main.cpp
Dis-Artist/03_telegram/bot/: bot.cpp  bot.hpp  bot_inline_keyboard.cpp  bot_inline_keyboard.hpp
Dis-Artist/03_telegram/course/: course.cpp  course.hpp
Dis-Artist/03_telegram/network/: network.cpp  network.hpp
Dis-Artist/03_telegram/weather/: weather.cpp  weather.hpp
Dis-Artist/04_nn/: CMakeLists.txt  README.md  main.cpp
KVAS-Team/01_vcs/: CMakeLists.txt  README.md  main.cpp
KVAS-Team/01_vcs/include/: cli.hpp  utils.hpp  vcs.hpp
KVAS-Team/01_vcs/src/: cli.cpp  utils.cpp  vcs.cpp
